--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 # Linux Essentials (level 1) Linux-ի Հիմունքներ (փուլ 1) 
 
-## 📚 Documentation
+## 📚 Training Material
 
 - 👉 [Introduction](1-1-intro.html)
 - 🧩 [CLI](1-2-cli.html)
